--- a/Blackjack/Blackjack/Blackjack/Blackjack.csproj
+++ b/Blackjack/Blackjack/Blackjack/Blackjack.csproj
@@ -46,11 +46,13 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Class2.cs" />
     <Compile Include="Class3.cs" />
+    <Compile Include="DeckPlayer.cs" />
     <Compile Include="KaartenDeck.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="randomize.cs" />
     <Compile Include="spel.cs" />
+    <Compile Include="Stack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
