single player werkt!

--- a/Blackjack/Blackjack/Blackjack/Blackjack.csproj
+++ b/Blackjack/Blackjack/Blackjack/Blackjack.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dealerRegels.cs" />
     <Compile Include="DeckDealer.cs" />
     <Compile Include="PuntenRegels.cs" />
     <Compile Include="Spacer.cs" />
